v4.14.2 ???
  - sip.voidptr() will now accept any object that implements the buffer
    protocol.

v4.14.1 27th October 2012
  - SIP_PYBUFFER can now be used to define objects that implement the Python
    buffer protocol.
  - Added /Capsule/ typedef annotation.
  - Added the 'z' format character to sipBuildResult().
  - Added the 'z', '!' and '$' format characters to sipParseResult().
  - The C prototype foo(void) is now accepted.
  - sipdistutils.py will now include swig_opts if no sip_opts have been
    defined.
  - Bug fixes.

v4.14 29th September 2012
  - The internal API version is increased to 9.0 requiring the regeneration of
    all modules.
  - Added the %InstanceCode directive.
  - Added the %VirtualErrorHandler directive.
  - Added the default_VirtualErrorHandler argument to the %Module directive.
  - Added the /VirtualErrorHandler/ class annotation.
  - Added the /NoVirtualErrorHandler/ and /VirtualErrorHandler/ function
    annotations.
  - The /AllowNone/ and /NoRelease/ mapped type annotations can now be used
    with mapped type templates.
  - SIP_PLATFORM_* and SIP_TIMELINE_* preprocessor symbols are generated
    corresponding to the '-t' arguments passed on the command line.
  - Deprecated sipTransferBreak().
  - For Python v2.x unsigned short and unsigned char (when used as a byte) are
    now converted to int, rather than long, objects.
  - Added support for MSVC 2010 to the build system.

v4.13.3 20th June 2012
  - The /NoRaisesPyException/ and /RaisesPyException/ function annotations can
    now be applied to constructors.
  - Added support for the Python v3.3 handling of Unicode.

v4.13.2 10th February 2012
  - A bug fix release.

v4.13.1 22nd December 2011
  - Deprecation warnings can no longer be disabled.
  - Added the all_raise_py_exception argument to the %Module directive.
  - Added the /NoRaisesPyException/ function annotation.
  - Added the /PyName/ typedef annotation.